[package]
name = "exampleproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.5.2", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1.10", features = ["tokio"] }
tokio = { version = "1.43.0", features = ["full"] }
http-body-util = "0.1.2"
bytes = "1.9.0"